# tui-use

./: .gitignore  README.md
tui-agent/: pyproject.toml
tui-agent/tests/: conftest.py  test_cli.py  test_daemon.py  test_keys.py  test_mouse.py  test_protocol.py  test_session.py
tui-agent/tui_agent/: cli.py  daemon.py  keys.py  mouse.py  protocol.py  session.py
tui-use-skill/: SKILL.md
